# unfair-data-generator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  make_unfair_classification.ipynb  model_trainer.py  pyproject.toml  requirements.txt  visualizer.py
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: paper.yml  test.yml
docs/: conf.py  index.rst  requirements.txt
docs/dev/: installation.rst
docs/make_unfair_classification/: index.rst
docs/make_unfair_classification/make_unfair_classification/: unfair_classification.rst
docs/make_unfair_classification/util/: util.rst
docs/unfair_data_generator/: index.rst
docs/unfair_data_generator/unfair_data_generator/: unfair_classification.rst
docs/unfair_data_generator/util/: util.rst
docs/user/: usage.rst
examples/: make_unfair_classification.ipynb
make_unfair_classification/: helpers.py  unfair_classification.py
make_unfair_classification/util/: helpers.py  model_trainer.py  visualizer.py
paper/: paper.bib  paper.md
tests/: test_dataset_structure.py  test_inequalities.py  test_weights_verification.py
unfair_data_generator/: unfair_classification.py
unfair_data_generator/util/: model_trainer.py  visualizer.py
