[tool.poetry]
name = "make-unfair-classification"
version = "0.1.0"
description = ""
authors = ["Sašo Karakatič <karakatic@gmail.com>", "Tia Žvajker <tia.zvajker@student.um.si>", "Tadej Lahovnik <lahovnik.tadej@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "~3.7.5"
numpy = "~1.24.4"
scikit-learn = "~1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
