[tool.poetry]
name = "unfair-data-generator"
version = "0.1.0"
description = ""
authors = ["Sašo Karakatič <karakatic@gmail.com>", "Tia Žvajker <tia.zvajker@student.um.si>", "Tadej Lahovnik <lahovnik.tadej@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "~3.7.5"
numpy = "^1.26.0"
pandas = "^2.3.1"
scikit-learn = "~1.3.2"
sphinx = {version = "^5.0", extras = ["docs"]}
sphinx-rtd-theme = {version = "^1.0.0", extras = ["docs"]}
fairlearn = "^0.12.0"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
